--- a/CloudShareCKPractice/Base.lproj/Main.storyboard
+++ b/CloudShareCKPractice/Base.lproj/Main.storyboard
@@ -184,26 +184,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QKa-Tn-xHE">
+                                                <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sJ9-8W-GEJ">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
-                                                </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y85-bu-apa">
-                                                    <rect key="frame" x="8" y="8" width="359" height="303.5"/>
-                                                    <state key="normal" title="Select Photo"/>
                                                     <connections>
-                                                        <action selector="selectPhotoButtonTapped:" destination="bom-t5-Mpc" eventType="touchUpInside" id="D7p-NC-0rN"/>
+                                                        <segue destination="0ic-5C-OcK" kind="embed" id="NGb-dA-gcn"/>
                                                     </connections>
-                                                </button>
+                                                </containerView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="y85-bu-apa" firstAttribute="leading" secondItem="WyH-La-ovI" secondAttribute="leadingMargin" id="2Iu-b7-nbI"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="y85-bu-apa" secondAttribute="trailing" id="3wA-99-c5b"/>
-                                                <constraint firstAttribute="bottom" secondItem="QKa-Tn-xHE" secondAttribute="bottom" id="Lss-3C-Shm"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="y85-bu-apa" secondAttribute="bottom" id="UPm-9N-p4d"/>
-                                                <constraint firstItem="y85-bu-apa" firstAttribute="top" secondItem="WyH-La-ovI" secondAttribute="topMargin" id="bz3-hI-owM"/>
-                                                <constraint firstAttribute="trailing" secondItem="QKa-Tn-xHE" secondAttribute="trailing" id="sy7-XA-2TE"/>
-                                                <constraint firstItem="QKa-Tn-xHE" firstAttribute="leading" secondItem="WyH-La-ovI" secondAttribute="leading" id="wfy-so-EWC"/>
-                                                <constraint firstItem="QKa-Tn-xHE" firstAttribute="top" secondItem="WyH-La-ovI" secondAttribute="top" id="zf6-57-Hty"/>
+                                                <constraint firstItem="sJ9-8W-GEJ" firstAttribute="top" secondItem="WyH-La-ovI" secondAttribute="top" id="3br-al-g1g"/>
+                                                <constraint firstItem="sJ9-8W-GEJ" firstAttribute="leading" secondItem="WyH-La-ovI" secondAttribute="leading" id="4vU-YU-9BG"/>
+                                                <constraint firstAttribute="bottom" secondItem="sJ9-8W-GEJ" secondAttribute="bottom" id="NF8-fh-UbC"/>
+                                                <constraint firstAttribute="trailing" secondItem="sJ9-8W-GEJ" secondAttribute="trailing" id="uD2-Sg-GFg"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -276,8 +268,6 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="imageView" destination="QKa-Tn-xHE" id="Wms-DL-rYX"/>
-                        <outlet property="selectPhotoButton" destination="y85-bu-apa" id="oWQ-6b-jYl"/>
                         <outlet property="textField" destination="wJ0-fD-Q5X" id="MBv-bL-70k"/>
                     </connections>
                 </tableViewController>
@@ -320,6 +310,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Owi-P7-RNg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1610" y="-59"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="gVY-q5-jUG">
+            <objects>
+                <viewController id="0ic-5C-OcK" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nh1-dx-zIO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6zd-nV-2Pb">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DBg-kJ-ejM">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
+                                <state key="normal" title="Select Photo"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="DBg-kJ-ejM" firstAttribute="leading" secondItem="nh1-dx-zIO" secondAttribute="leading" id="20F-85-pkP"/>
+                            <constraint firstItem="DBg-kJ-ejM" firstAttribute="top" secondItem="nh1-dx-zIO" secondAttribute="top" id="3bV-Ev-1E8"/>
+                            <constraint firstAttribute="trailing" secondItem="6zd-nV-2Pb" secondAttribute="trailing" id="Byd-Dd-JWO"/>
+                            <constraint firstItem="6zd-nV-2Pb" firstAttribute="leading" secondItem="nh1-dx-zIO" secondAttribute="leading" id="Rtm-H9-oPp"/>
+                            <constraint firstAttribute="bottom" secondItem="DBg-kJ-ejM" secondAttribute="bottom" id="Uj2-dZ-fey"/>
+                            <constraint firstAttribute="bottom" secondItem="6zd-nV-2Pb" secondAttribute="bottom" id="UqK-WO-18H"/>
+                            <constraint firstAttribute="trailing" secondItem="DBg-kJ-ejM" secondAttribute="trailing" id="dMU-5s-SN0"/>
+                            <constraint firstItem="6zd-nV-2Pb" firstAttribute="top" secondItem="nh1-dx-zIO" secondAttribute="top" id="lz4-V6-NFK"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="el8-x8-HIv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3223" y="0.0"/>
         </scene>
     </scenes>
 </document>
