--- a/CloudShareCKPractice/Base.lproj/Main.storyboard
+++ b/CloudShareCKPractice/Base.lproj/Main.storyboard
@@ -29,8 +29,23 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9hJ-Yh-0YJ" id="7JU-dc-Grd">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zlg-tb-H9E">
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="320" id="VWv-0J-9Ic"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="zlg-tb-H9E" firstAttribute="top" secondItem="7JU-dc-Grd" secondAttribute="top" id="5i5-fR-NwS"/>
+                                                <constraint firstItem="zlg-tb-H9E" firstAttribute="leading" secondItem="7JU-dc-Grd" secondAttribute="leading" id="Dev-LS-uof"/>
+                                                <constraint firstAttribute="bottom" secondItem="zlg-tb-H9E" secondAttribute="bottom" id="UIQ-GX-dLE"/>
+                                                <constraint firstAttribute="trailing" secondItem="zlg-tb-H9E" secondAttribute="trailing" id="lMu-Li-m6M"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="postImage" destination="zlg-tb-H9E" id="ehg-0f-ujq"/>
                                             <segue destination="vb5-j1-uJ1" kind="show" identifier="showPostDetail" id="Oiu-z3-8ig"/>
                                         </connections>
                                     </tableViewCell>
@@ -80,8 +95,11 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="efP-Kg-wnp">
                                     <rect key="frame" x="0.0" y="8" width="375" height="350"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Jo-G1-mgh">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Jo-G1-mgh">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="320" id="iSa-0K-kga"/>
+                                            </constraints>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hVx-iA-IB6">
                                             <rect key="frame" x="0.0" y="320" width="375" height="30"/>
@@ -112,9 +130,13 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="hVx-iA-IB6" secondAttribute="trailing" id="2BI-LS-L3t"/>
+                                        <constraint firstItem="8Jo-G1-mgh" firstAttribute="top" secondItem="efP-Kg-wnp" secondAttribute="top" id="Bxa-In-W8Z"/>
+                                        <constraint firstAttribute="trailing" secondItem="8Jo-G1-mgh" secondAttribute="trailing" id="FDG-zX-5C7"/>
+                                        <constraint firstItem="hVx-iA-IB6" firstAttribute="top" secondItem="8Jo-G1-mgh" secondAttribute="bottom" id="KJK-Jo-aJm"/>
                                         <constraint firstItem="hVx-iA-IB6" firstAttribute="leading" secondItem="efP-Kg-wnp" secondAttribute="leading" id="Rsd-Fc-m4L"/>
                                         <constraint firstAttribute="bottom" secondItem="hVx-iA-IB6" secondAttribute="bottom" id="UOg-ir-IYw"/>
                                         <constraint firstItem="hVx-iA-IB6" firstAttribute="top" secondItem="8Jo-G1-mgh" secondAttribute="bottom" id="jXU-AA-iyg"/>
+                                        <constraint firstItem="8Jo-G1-mgh" firstAttribute="leading" secondItem="efP-Kg-wnp" secondAttribute="leading" id="jsS-SL-nZI"/>
                                     </constraints>
                                 </stackView>
                             </subviews>
@@ -184,10 +206,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sJ9-8W-GEJ">
+                                                <containerView opaque="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="sJ9-8W-GEJ">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
                                                     <connections>
-                                                        <segue destination="0ic-5C-OcK" kind="embed" id="NGb-dA-gcn"/>
+                                                        <segue destination="0ic-5C-OcK" kind="embed" identifier="embeddedPhotoSelect" id="NGb-dA-gcn"/>
                                                     </connections>
                                                 </containerView>
                                             </subviews>
@@ -319,8 +341,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6zd-nV-2Pb">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6zd-nV-2Pb">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="320" id="qLM-2e-pSD"/>
+                                </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DBg-kJ-ejM">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
@@ -349,7 +374,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="el8-x8-HIv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3223" y="0.0"/>
+            <point key="canvasLocation" x="3225" y="5"/>
         </scene>
     </scenes>
 </document>
