--- a/CloudShareCKPractice/Base.lproj/Main.storyboard
+++ b/CloudShareCKPractice/Base.lproj/Main.storyboard
@@ -93,7 +93,7 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="efP-Kg-wnp">
-                                    <rect key="frame" x="0.0" y="8" width="375" height="350"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="364"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Jo-G1-mgh">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
@@ -102,24 +102,24 @@
                                             </constraints>
                                         </imageView>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hVx-iA-IB6">
-                                            <rect key="frame" x="0.0" y="320" width="375" height="30"/>
+                                            <rect key="frame" x="0.0" y="320" width="375" height="44"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lfo-8e-iXv">
-                                                    <rect key="frame" x="0.0" y="0.0" width="125" height="30"/>
+                                                    <rect key="frame" x="0.0" y="7" width="125" height="30"/>
                                                     <state key="normal" title="Comment"/>
                                                     <connections>
                                                         <action selector="commentTapped:" destination="vb5-j1-uJ1" eventType="touchUpInside" id="fcl-gM-fS4"/>
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4bK-JW-4nr">
-                                                    <rect key="frame" x="125" y="0.0" width="125" height="30"/>
+                                                    <rect key="frame" x="125" y="7" width="125" height="30"/>
                                                     <state key="normal" title="Share"/>
                                                     <connections>
                                                         <action selector="shareTapped:" destination="vb5-j1-uJ1" eventType="touchUpInside" id="0Xg-El-Cew"/>
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QXe-L4-ZsF">
-                                                    <rect key="frame" x="250" y="0.0" width="125" height="30"/>
+                                                    <rect key="frame" x="250" y="7" width="125" height="30"/>
                                                     <state key="normal" title="Follow"/>
                                                     <connections>
                                                         <action selector="followTapped:" destination="vb5-j1-uJ1" eventType="touchUpInside" id="Ex6-uW-bDo"/>
@@ -129,12 +129,12 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="hVx-iA-IB6" secondAttribute="trailing" id="2BI-LS-L3t"/>
+                                        <constraint firstItem="hVx-iA-IB6" firstAttribute="trailing" secondItem="efP-Kg-wnp" secondAttribute="trailing" id="2BI-LS-L3t"/>
                                         <constraint firstItem="8Jo-G1-mgh" firstAttribute="top" secondItem="efP-Kg-wnp" secondAttribute="top" id="Bxa-In-W8Z"/>
-                                        <constraint firstAttribute="trailing" secondItem="8Jo-G1-mgh" secondAttribute="trailing" id="FDG-zX-5C7"/>
+                                        <constraint firstItem="8Jo-G1-mgh" firstAttribute="trailing" secondItem="efP-Kg-wnp" secondAttribute="trailing" id="FDG-zX-5C7"/>
                                         <constraint firstItem="hVx-iA-IB6" firstAttribute="top" secondItem="8Jo-G1-mgh" secondAttribute="bottom" id="KJK-Jo-aJm"/>
                                         <constraint firstItem="hVx-iA-IB6" firstAttribute="leading" secondItem="efP-Kg-wnp" secondAttribute="leading" id="Rsd-Fc-m4L"/>
-                                        <constraint firstAttribute="bottom" secondItem="hVx-iA-IB6" secondAttribute="bottom" id="UOg-ir-IYw"/>
+                                        <constraint firstItem="hVx-iA-IB6" firstAttribute="bottom" secondItem="efP-Kg-wnp" secondAttribute="bottom" id="UOg-ir-IYw"/>
                                         <constraint firstItem="hVx-iA-IB6" firstAttribute="top" secondItem="8Jo-G1-mgh" secondAttribute="bottom" id="jXU-AA-iyg"/>
                                         <constraint firstItem="8Jo-G1-mgh" firstAttribute="leading" secondItem="efP-Kg-wnp" secondAttribute="leading" id="jsS-SL-nZI"/>
                                     </constraints>
@@ -142,9 +142,9 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="efP-Kg-wnp" firstAttribute="top" secondItem="sH0-Y5-ty5" secondAttribute="top" constant="8" id="1t7-Q3-S2V"/>
+                                <constraint firstItem="efP-Kg-wnp" firstAttribute="top" secondItem="sH0-Y5-ty5" secondAttribute="top" id="1t7-Q3-S2V"/>
                                 <constraint firstItem="efP-Kg-wnp" firstAttribute="leading" secondItem="sH0-Y5-ty5" secondAttribute="leading" id="Wo2-kh-8Cm"/>
-                                <constraint firstAttribute="bottom" secondItem="efP-Kg-wnp" secondAttribute="bottom" constant="14" id="xan-aT-vPr"/>
+                                <constraint firstAttribute="bottom" secondItem="efP-Kg-wnp" secondAttribute="bottom" constant="8" id="xan-aT-vPr"/>
                                 <constraint firstAttribute="trailing" secondItem="efP-Kg-wnp" secondAttribute="trailing" id="zC7-zf-r5Z"/>
                             </constraints>
                         </view>
@@ -197,11 +197,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="AuD-mm-gyc">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchResult" rowHeight="387" id="AuD-mm-gyc">
+                                <rect key="frame" x="0.0" y="28" width="375" height="387"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AuD-mm-gyc" id="0sd-v5-NUb">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="386.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -214,7 +214,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oeX-AG-q6r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1611" y="950"/>
+            <point key="canvasLocation" x="1608.8" y="765.96701649175418"/>
         </scene>
         <!--Add Post Table View Controller-->
         <scene sceneID="eT5-0G-sha">
